#23 Adicionado o esboco de tela

--- a/Napolis/src/napolis/NapolisApp.form
+++ b/Napolis/src/napolis/NapolisApp.form
@@ -51,6 +51,9 @@
                 <Property name="mnemonic" type="int" value="116"/>
                 <Property name="text" type="java.lang.String" value="Pizza mais vendida"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cutMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
